/**
 * Represents the lifecycle states of a press release.
 */
public enum ReleaseState {
    /**
     * The press release is being drafted and not yet ready for review.
     */
    DRAFT,

    /**
     * The press release is under review and pending publication.
     */
    REVIEW,

    /**
     * The press release has been published and is publicly available.
     */
    PUBLISHED
}